# ros_kf_attitude_estimation

./: CMakeLists.txt  README.md  package.xml
scripts/: calibration.py  imu_listener.py  rpi_read_imu_data.py
